--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
         <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-html-keyboard-response.js"></script>
         <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-audio-button-response.js"></script> 
         <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-audio-keyboard-response.js"></script> 
-        <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-survey-likert.js"></script>        
+        <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-survey-likert.js"></script>
+        <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-survey-multi-choice.js"></script>        
         <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-audio-slider-response.js"></script>
         <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-call-function.js"></script>
         <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-external-html.js"></script>
         <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-fullscreen.js"></script>
+        <script src="sound_files.js"></script>
         <link href="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/jspsych.css" rel="stylesheet" type="text/css" />
         <script src='sentence_experiment.js'> </script>
     </script>
