Added Danish version + utf-8

--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
 <html>
     <head>
-        <title>Sentence experiment</title>   
-        <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/jspsych.js"></script>
-        <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-instructions.js"></script>
-        <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-preload.js"></script>
-        <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-html-keyboard-response.js"></script>
-        <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-audio-button-response.js"></script> 
-        <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-audio-keyboard-response.js"></script> 
-        <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-survey-likert.js"></script>
-        <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-survey-multi-choice.js"></script>        
-        <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-audio-slider-response.js"></script>
-        <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-call-function.js"></script>
-        <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-external-html.js"></script>
-        <script src="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/plugin-fullscreen.js"></script>
-        <!--<script src="sound_files.js"></script>-->
-        <script src="all_files.js"></script>
-        <link href="C:/Users/Ida/OneDrive - Aarhus Universitet/Speciale - praktik/language switching experiment/jspsych/jspsych.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+        <title>Sentence experiment</title> 
+        <script src="jspsych/jspsych.js"></script>
+        <script src="jspsych/plugin-instructions.js"></script>
+        <script src="jspsych/plugin-preload.js"></script>
+        <script src="jspsych/plugin-html-keyboard-response.js"></script>
+        <script src="jspsych/plugin-audio-button-response.js"></script> 
+        <script src="jspsych/plugin-audio-keyboard-response.js"></script> 
+        <script src="jspsych/plugin-survey-likert.js"></script>
+        <script src="jspsych/plugin-survey-text.js"></script>
+        <script src="jspsych/plugin-survey-multi-choice.js"></script>        
+        <script src="jspsych/plugin-audio-slider-response.js"></script>
+        <script src="jspsych/plugin-call-function.js"></script>
+        <script src="jspsych/plugin-external-html.js"></script>
+        <script src="jspsych/plugin-fullscreen.js"></script>
+        <script src="UK_stimuli1.js"></script>
+        <script src="UK_stimuli2.js"></script>
+        <script src="UK_stimuli3.js"></script>
+        <script src="UK_stimuli4.js"></script>
+        <script src="UK_stimuli5.js"></script>
+        <script src="UK_stimuli6.js"></script>
+        <script src="DK_stimuli1.js"></script>
+        <script src="DK_stimuli2.js"></script>
+        <script src="DK_stimuli3.js"></script>
+        <script src="DK_stimuli4.js"></script>
+        <script src="DK_stimuli5.js"></script>
+        <script src="DK_stimuli6.js"></script>
+        <link href="jspsych/jspsych.css" rel="stylesheet" type="text/css" />
         <script src='sentence_experiment.js'> </script>
     </script>
     <style>
@@ -29,7 +41,7 @@
           bottom: 0;
           left: 0;
           right: 0;
-          background: url(mib.png);
+          background: url(images/aulogo_uk_var2_blue.png);
           background-position: 105% 110%;
           background-repeat: no-repeat;
           background-attachment: fixed;
